crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_repos_scroll_middle.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 18)"
---
╭ cohors vX.Y.Z ──────────────────────────────────────────────────────────────────────────────────╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention (10 of 12 repositories) ───────────────────────────────────────────────────────────────╮
│ 4 unpushed (1 aging) · 3 behind · 6 dirty · 2 stashed · 1 unreadable                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositories (12) · sort: dirty-first ───────────────────────────────────────────────────────────╮
│    Repo              Branch         Sync         Changes  Last commit                            │
│                                             ↑ 3 more                                             │
│    analytics         main           ↑1 ●         · s2      4d  perf: precompute funnel rollups   │
│    design-system     main           ↑1 ● 1pr     · s1      6h  feat: dark-mode tokens            │
│    web-app           feat/checkout  ↓5 ● 1pr     7        20m  wip: cart drawer animation        │
│    data-pipeline     main           ↓3 ●         ·         5h  fix: backfill job off-by-one windo│
│    experiments       @9f8e7d6       —            7         1y  spike: try wgpu for the renderer  │
│▌   infra             @a1b2c3d       —            4         1w  build: pin terraform provider vers│
│                                             ↓ 3 more                                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
───────────────────────────────────── press h to unhide hints ──────────────────────────────────────
