crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_standup.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 22)"
---
╭ cohors vX.Y.Z ──────────────────────────────────────────────────────5 repos · sort: dirty-first ╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰───────╭ Standup · this week ─────────────────────────────────────────────────────────────╮───────╯
╭ Attent│                                                                                  │───────╮
│ 4 of 5│ ╭ Repos ─────────────────╮  ╭ payments ────────────────────────────────────────╮ │       │
╰───────│ │ payments  24           │  │ aa00000  feat: payments work item 0             █│ │───────╯
╭ Reposi│ │ web-app  5             │  │ aa00001  feat: payments work item 1             █│ │───────╮
│    Rep│ │                        │  │ aa00002  feat: payments work item 2             █│ │       │
│       │ │                        │  │ aa00003  feat: payments work item 3             █│ │       │
│▌   leg│ │                        │  │ aa00004  feat: payments work item 4             █│ │ied)   │
│    pay│ │                        │  │ aa00005  feat: payments work item 5             ║│ │       │
│    web│ │                        │  │ aa00006  feat: payments work item 6             ║│ │       │
│    inf│ │                        │  │ aa00007  feat: payments work item 7             ║│ │       │
│    aut│ │                        │  │ aa00008  feat: payments work item 8             ║│ │       │
│       │ │                        │  │ aa00009  feat: payments work item 9             ║│ │       │
│       │ │                        │  │ aa00010  feat: payments work item 10            ║│ │       │
│       │ │                        │  │ aa00011  feat: payments work item 11            ║│ │       │
│       │ │                        │  │ aa00012  feat: payments work item 12            ║│ │       │
╰───────│ ╰────────────────────────╯  ╰──────────────────────────────────────────────────╯ │───────╯
╭───────╰──────────────────────────────────────────────────────────── 29 commits · 2 repos ╯───────╮
│ ↑/↓ repo · →/⏎ view commits · w window · y copy · q close                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
