crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_standup_collecting.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 18)"
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ▜▒▟███╭ Standup · this week ─────────────────────────────────────────────────────────────╮       │
│ ▟██▌█▐│                                                                                  │       │
│ ▀▐▖▀█▀│ Collecting your commits for this week…                                           │       │
╰───────│                                                                                  │───────╯
╭ Attent│                                                                                  │───────╮
│ 1 unpu│                                                                                  │       │
╰───────│                                                                                  │───────╯
╭ Reposi│                                                                                  │───────╮
│    Rep│                                                                                  │       │
│▌   leg│                                                                                  │ied)   │
│    pay│                                                                                  │       │
│    web│                                                                                  │       │
│       │                                                                                  │       │
╰───────│                                                                                  │───────╯
╭───────╰──────────────────────────────────────────────────────────────────────────────────╯───────╮
│ ↑/↓ repo · →/⏎ view commits · w window · y copy · q close                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
