crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_standup_narrow_stacked.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 50, 24)"
---
╭ cohors vX.Y.Z ────────────────────────────────╮
│ All your git repositories at a glance — status │
╰────────────────────────────────────────────────╯
╭ Attention (4 of 5 repositories) ───────────────╮
│ 1 ╭ Standup · this week ───────────────────╮·  │
╰───│                                        │───╯
╭ Re│ Your commits this week  ·  pick a repo │───╮
│   │                                        │s  │
│   │ ╭ Repos ─────────────────────────────╮ │   │
│▌  │ │ payments  8                        │ │   │
│   │ │ web-app  3                         │ │   │
│   │ │                                    │ │   │
│   │ │                                    │ │   │
│   │ │                                    │ │   │
│   │ │                                    │ │   │
│   │ ╰────────────────────────────────────╯ │   │
│   │                                        │   │
│   │ ╭ payments ──────────────────────────╮ │   │
│   ╰────────────────── 11 commits · 2 repos ╯   │
╰────────────────────────────────────────────────╯
╭────────────────────────────────────────────────╮
│ ↑/↓ repo · →/⏎ view commits · w window · y     │
│ copy · q close                                 │
╰────────────────────────────────────────────────╯
